sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: value downto is not a member of Int
                  {test=true; for (i<-(x-2-count) downto 0) {if (isSmaller((i+1), i)) {swap(i, (i+1)); test=false}}; count=count+1}
                                                  ^